--- a/ELO.ipynb
+++ b/ELO.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,11 +27,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train = pd.read_csv('all/train.csv')\n"
+    "train = pd.read_csv('all/train.csv')\n",
+    "test = pd.read_csv('all/test.csv')\n"
    ]
   },
   {
@@ -415,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -433,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -546,7 +547,7 @@
        "4 -0.159749    13  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -557,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -566,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -575,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -584,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -593,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -606,7 +607,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -617,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -739,9 +740,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/ziluli/anaconda3/envs/elo/lib/python3.6/site-packages/lightgbm/__init__.py:46: UserWarning: Starting from version 2.2.1, the library file in distribution wheels for macOS is built by the Apple Clang (Xcode_8.3.1) compiler.\n",
+      "This means that in case of installing LightGBM from PyPI via the ``pip install lightgbm`` command, you don't need to install the gcc compiler anymore.\n",
+      "Instead of that, you need to install the OpenMP library, which is required for running LightGBM on the system with the Apple Clang compiler.\n",
+      "You can install the OpenMP library by the following command: ``brew install libomp``.\n",
+      "  \"You can install the OpenMP library by the following command: ``brew install libomp``.\", UserWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.model_selection import KFold\n",
     "from sklearn.metrics import mean_squared_error\n",
@@ -750,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -759,19 +772,57 @@
     "               \"reg_alpha\": 1, \"reg_lambda\": 1,\n",
     "               \"num_leaves\" : 64, \"learning_rate\" : 0.01, \n",
     "               \"subsample\" : 0.8, \"colsample_bytree\" : 0.8, \n",
-    "               \"verbosity\": -1}"
+    "               \"verbosity\": -1}\n",
+    "#k_fold = KFold(n_splits=5, shuffle=True, random_state=42)\n",
+    "\n",
+    "\n",
+    "lgb_train = lgb.Dataset(train_X, train_y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "gbm = lgb.train(lgb_params,\n",
+    "                lgb_train,\n",
+    "                num_boost_round=20,\n",
+    "                )"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<lightgbm.basic.Booster at 0x1a2458d630>"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gbm.save_model('model.txt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = gbm.predict(test_X, num_iteration=gbm.best_iteration)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -782,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -814,27 +865,27 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>C_ID_0ab67a22ab</td>\n",
-       "      <td>0.524324</td>\n",
+       "      <td>-0.426282</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>C_ID_130fd0cbdd</td>\n",
-       "      <td>0.593036</td>\n",
+       "      <td>-0.451205</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>C_ID_b709037bc5</td>\n",
-       "      <td>0.424597</td>\n",
+       "      <td>-0.362897</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>C_ID_d27d835a9f</td>\n",
-       "      <td>0.338680</td>\n",
+       "      <td>-0.334358</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>C_ID_2b5e3df5c2</td>\n",
-       "      <td>0.829540</td>\n",
+       "      <td>-0.454812</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -842,14 +893,14 @@
       ],
       "text/plain": [
        "           card_id    target\n",
-       "0  C_ID_0ab67a22ab  0.524324\n",
-       "1  C_ID_130fd0cbdd  0.593036\n",
-       "2  C_ID_b709037bc5  0.424597\n",
-       "3  C_ID_d27d835a9f  0.338680\n",
-       "4  C_ID_2b5e3df5c2  0.829540"
+       "0  C_ID_0ab67a22ab -0.426282\n",
+       "1  C_ID_130fd0cbdd -0.451205\n",
+       "2  C_ID_b709037bc5 -0.362897\n",
+       "3  C_ID_d27d835a9f -0.334358\n",
+       "4  C_ID_2b5e3df5c2 -0.454812"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -868,9 +919,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "ELO",
    "language": "python",
-   "name": "python3"
+   "name": "elo"
   },
   "language_info": {
    "codemirror_mode": {
@@ -882,7 +933,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
